--- a/Documentatie/RoT-Documentatie.html
+++ b/Documentatie/RoT-Documentatie.html
@@ -1,108 +1,197 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Scholarly HTML</title>
-    <link rel="stylesheet" href="scholarly.min.css">
-    <style>
-      h3 {
-        margin-top: 0px;
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+  <title>Scholarly HTML</title>
+  <link rel="stylesheet" href="scholarly.min.css">
+  <style>
+    h3 {
+      margin-top: 0px;
 
-      }
-      </style>
-  </head>
-  <body prefix="schema: http://schema.org">
-    <header>
-      <h1>RoT-Romanian Traffic Signs Tutor</h1>
-    </header>
-    <div role="contentinfo"><ol role="directory"><li><span>1.</span>Introducere</li><li><span>2. </span>Caracteristici</li><li><span>3. </span>Arhitectura Aplicatie</li><li><span>4. </span>Motivul pentru care am ales acest design</li><li><span>5. </span>Motivul pentru care am ales acest proiect</li><li><span>5. </span>Referinte</li></ol>
-      <dl>
-        <dt>Autori</dt>
-        <dd>
-          Ceobanu Alexandra
-          &amp;
-          Ionașcu Alexandrin
-          &amp;
-          Solomon Claudia
-        </dd>
-      </dl>
-    </div>
-    <section id="introduction" role="doc-introduction">
-      <h2>1.Introducere</h2>
-      <p>Rot este o aplicație web care oferă utilizatorilor posibilitatea de a se pregăti pentru examenul teoretic în vederea obținerii permisului de conducere. </p>
-    </section>
-    <section id="characteristics">
-      <h2>2.Caracteristici</h2>
-      <p>Aplicația pune la dispoziție utilizatorului un curs de legislație rutieră organizat pe capitole, cât și o secțiune pentru învățarea indicatoarelor. Fiecare capitol din legislație conține atât un video explicativ cât și text pentru a facilita procesul de învațare. De asemenea, pentru fixarea informațiilor acumulate, utilizatorul va putea face chestionare cu întrebările posibile la examenul teoretic. Dacă utilizatorul are un cont în aplicație acesta va putea să își urmarească progresul în procesul de învațare și va putea avansa în clasamentul celor mai sârguincioși utilizatori.Pe langă procesul de învațare, utilizatorul mai poate fi interesat și de o comparație între indicatoarele din România și alte două țări europene, cât și de un top al celor mai bune școli de șoferi, în funcție de promovabilitatea la examenul auto.  </p>
-    </section>
-      <section id="Architecture">
-      <h2>3.Arhitectura Aplicatiei</h2>
-      <p>Aplicatia Web contine mai multe pagini html printre care utilizatorul poate naviga cu usurinta.</p>
-      <dl>
-      <dt><h3>Pagina Acasa</h3></dt>
-      <dd>Pagina principala a aplicatiei. Log-ul redirectioneaza spre aceasta pagina</dd>
-      </dl>
-      <dl>
-        <dt><h3>Pagina Autentificare</h3></dt>
-        <dd>Pagina in care utilizatorul se autentifica</dd>
-        </dl>
-        <dl>
-          <dt><h3>Pagina Inregistrare</h3></dt>
-          <dd>Pagina in care utilizatorul isi poate crea un cont</dd>
-        </dl>
-      <dl>
-      <dt><h3>Pagina Legislație</h3></dt>
-      <dd>Pagina cu legislatia din Romania structurata pe capitole</dd>
-      </dl>
-      <dl>
-      <dt><h3>Pagina Indicatoare</h3></dt>
-      <dd>Pagina cu indicatoarele auto grupate pe categorii</dd>
-      </dl>
-      <dl>
-      <dt><h3>Pagina Categorii Permis</h3></dt>
-      <dd>Pagina cu categoriile de permis disponibile pentru a invata</dd>
-      </dl>
-      <dl>
-      <dt><h3>Pagina Chestionare</h3></dt>
-      <dd>Pagina cu chestionare unde utilizatorul isi poate testa cunostintele</dd>
-      </dl>
-      <dl>
-      <dt><h3>Pagina Comparatii</h3></dt>
-      <dd>Pagina care ofera o comparație intre indicatoarele din Romania si cele din alte tari europene</dd>
-      </dl>
-      <dl>
-      <dt><h3>Pagina Contact</h3></dt>
-      <dd>Pagina de contact unde se pot gasi informatii despre modul in care putem fi contactati</dd>
-      </dl>
-      <dl>
-      <dt><h3>Pagina Intrebari Frecvente</h3></dt>
-      <dd>Pagina cu intrebarile cele mai frecvente si cu raspunsurile la acestea</dd>
-      </dl>
-      <dl>
-      <dt><h3>Pagina Top Scoli Auto</h3></dt>
-      <dd>Pagina cu cele mai bune scoli auto din anumite orase</dd>
-      </dl>
-      <dl>
-      <dt><h3>Ajutor</h3></dt>
-      <dd>Pagina care ofera instructiuni pentru a utiliza aplicatia la potential maxim</dd>
-      </dl>
-      <dl>
-      <dt><h3>Clasament</h3></dt>
-      <dd>Pagina care ofera un clasament general cu cei mai buni utilizatori</dd>
-      </dl>
-      </section>
-      <section id="Reason1"></section>
-      <h2>4.Motivul pentru care am ales acest design</h2>
-      <p>Am ales un design simplu și intuitiv pentru că ne-am dorit ca aplicația să fie ușor de folosit pentru toată lumea, indiferent de nivelul lor de experiență cu tehnologia. Paginile nu sunt încărcate cu multe informații pentru a nu bulversa sau plictisi utilizatorul. De asemenea este important ca în timpul procesului de învățare acesta să nu fie distras de anumite elemente.</p>
-    </section>
-      <section id="Reason2"></section>
-      <h2>5.Motivul pentru care am ales acest proiect</h2>
-      <p>Am ales să dezvoltăm această aplicație pentru că ne-am dorit să realizăm ceva care chiar ar putea veni in ajutorul oamenilor. Fiind o aplicație complexă și datorită faptului că există mai multe aplicații asemanatoare, credem că este o adevarată provocare să ne ridicăm la nivelul acestora, lucru ce ne va determina să învațăm mai multe și să devenim mai buni.</p>
-    </section>
-    <section id="biblio-references">
-      <h2>Referinte</h2>
-      <a href="https://www.scoalarutiera.ro/">Scoala Rutiera</a><br>
-      <a href="https://www.codrutier.ro/">Codul Rutier</a><br>
-      <a href="https://www.wikiwand.com/en/Comparison_of_European_road_signs">Wikiwand</a>
-    </section>
+    }
+  </style>
+</head>
+<body prefix="schema: http://schema.org">
+<header>
+  <h1>RoT-Romanian Traffic Signs Tutor</h1>
+</header>
+<div role="contentinfo"><ol role="directory"><li><span>1.</span>Introducere</li><li><span>2. </span>Caracteristici</li><li><span>3. </span>Arhitectura Aplicatie</li><li><span>4. </span>Motivul pentru care am ales acest design</li><li><span>5. </span>Motivul pentru care am ales acest proiect</li><li><span>5. </span>Referinte</li></ol>
+  <dl>
+    <dt>Autori</dt>
+    <dd>
+      Ceobanu Alexandra
+      &amp;
+      Ionașcu Alexandrin
+      &amp;
+      Solomon Claudia
+    </dd>
+  </dl>
+</div>
+<section id="introduction" role="doc-introduction">
+  <h2>1.Introducere</h2>
+  <p>Rot este o aplicație web care oferă utilizatorilor posibilitatea de a se pregăti pentru examenul teoretic în vederea obținerii permisului de conducere. </p>
+</section>
+<section id="characteristics">
+  <h2>2.Caracteristici</h2>
+  <p>Aplicația pune la dispoziție utilizatorului un curs de legislație rutieră organizat pe capitole, cât și o secțiune pentru învățarea indicatoarelor. Fiecare capitol din legislație conține atât un video explicativ cât și text pentru a facilita procesul de învațare. De asemenea, pentru fixarea informațiilor acumulate, utilizatorul va putea face chestionare cu întrebările posibile la examenul teoretic. Dacă utilizatorul are un cont în aplicație acesta va putea să își urmarească progresul în procesul de învațare și va putea avansa în clasamentul celor mai sârguincioși utilizatori.Pe langă procesul de învațare, utilizatorul mai poate fi interesat și de o comparație între indicatoarele din România și alte două țări europene, cât și de un top al celor mai bune școli de șoferi, în funcție de promovabilitatea la examenul auto.  </p>
+</section>
+<section id="Architecture">
+  <h2>3.Arhitectura Aplicatiei</h2>
+  <p>Aplicatia Web contine mai multe pagini html printre care utilizatorul poate naviga cu usurinta.</p>
+  <dl>
+    <dt><h3>Pagina Acasa</h3></dt>
+    <dd>Pagina principala a aplicatiei</dd>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Categoria A&B - redirectioneaza catre pagina Categoria A / Categoria B</li>
+    <li>Comparatii - redirectioneaza catre pagina Comparatii </li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Conectare</h3></dt>
+    <dd>Pagina in care utilizatorul se autentifica folosind:</dd>
+    <li>email</li>
+    <li>parola</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Inregistrare</h3></dt>
+    <dd>Pagina in care utilizatorul isi poate crea un cont folosind:</dd>
+    <li>email</li>
+    <li>username</li>
+    <li>numar de telefon</li>
+    <li>parola</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Legislație</h3></dt>
+    <dd>Pagina cu legislatia din Romania structurata pe capitole</dd>
+    <li>Pagina principala contine capitolele si prin butonul Intra si Invata se face redirectionarea spre pagini individuale pentru fiecare capitol de legislatie</li>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Indicatoare</h3></dt>
+    <dd>Pagina cu indicatoarele auto grupate pe categorii.</dd>
+    <dd>Pagina principala de indicatoare contine fiecare categorie de indicatoare. Dintre aceste se poate selecta doar una folosind butonul Invata</dd>
+    <dd>Pagina cu indicatoare dintr-o categorie aleasa - contine toate indicatoarele din acea categorie. Se poate accesa un singur indicator folosind butonul Vezi delatii</dd>
+    <dd>Pagina cu indicatorul ales contine: </dd>
+    <li>Urmator - buton de redirectionare spre indicatorul urmator din categorie </li>
+    <li>Anterior - buton de redirectionare spre indicatorul anterior din categorie</li>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Categorii Permis</h3></dt>
+    <dd>Pagina cu categoriile de permis disponibile pentru a invata</dd>
+    <li>Intra si invata - buton de redirectionare spre legislatie</li>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Chestionare</h3></dt>
+    <dd>Pagina cu chestionare unde utilizatorul isi poate testa cunostintele</dd>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Comparatii</h3></dt>
+    <dd>Pagina care ofera o comparație intre indicatoarele din Romania si cele din alte tari europene</dd>
+    <li>Pagina principala ofera un dropdown ce permite alegerea dintre Anglia/Turcia</li>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Contact</h3></dt>
+    <dd>Pagina de contact unde se pot gasi informatii despre modul in care putem fi contactati</dd>
+    <li>Harta - redirectionare spre Google Maps</li>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Intrebari Frecvente</h3></dt>
+    <dd>Pagina cu intrebarile cele mai frecvente si cu raspunsurile la acestea</dd>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Categoria A&B - redirectioneaza catre pagina Categoria A / Categoria B</li>
+    <li>Comparatii - redirectioneaza catre pagina Comparatii </li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+  </dl>
+  <dl>
+    <dt><h3>Pagina Top Scoli Auto</h3></dt>
+    <dd>Pagina cu cele mai bune scoli auto din anumite orase</dd>
+  </dl>
+  <dl>
+    <dt><h3>Ajutor</h3></dt>
+    <dd>Pagina care ofera instructiuni pentru a utiliza aplicatia la potential maxim</dd>
+  </dl>
+  <dl>
+    <dt><h3>Clasament</h3></dt>
+    <dd>Pagina care ofera un clasament general cu cei mai buni utilizatori</dd>
+  </dl>
+</section>
+<section id="Reason1"></section>
+<h2>4.Motivul pentru care am ales acest design</h2>
+<p>Am ales un design simplu și intuitiv pentru că ne-am dorit ca aplicația să fie ușor de folosit pentru toată lumea, indiferent de nivelul lor de experiență cu tehnologia. Paginile nu sunt încărcate cu multe informații pentru a nu bulversa sau plictisi utilizatorul. De asemenea este important ca în timpul procesului de învățare acesta să nu fie distras de anumite elemente.</p>
+</section>
+<section id="Reason2"></section>
+<h2>5.Motivul pentru care am ales acest proiect</h2>
+<p>Am ales să dezvoltăm această aplicație pentru că ne-am dorit să realizăm ceva care chiar ar putea veni in ajutorul oamenilor. Fiind o aplicație complexă și datorită faptului că există mai multe aplicații asemanatoare, credem că este o adevarată provocare să ne ridicăm la nivelul acestora, lucru ce ne va determina să învațăm mai multe și să devenim mai buni.</p>
+</section>
+<section id="biblio-references">
+  <h2>Referinte</h2>
+  <a href="https://www.scoalarutiera.ro/">Scoala Rutiera</a><br>
+  <a href="https://www.codrutier.ro/">Codul Rutier</a><br>
+  <a href="https://www.wikiwand.com/en/Comparison_of_European_road_signs">Wikiwand</a>
+</section>
 </body>
 </html>
