--- a/Documentatie/RoT-Documentatie.html
+++ b/Documentatie/RoT-Documentatie.html
@@ -119,6 +119,7 @@
   <dl>
     <dt><h3>Pagina Chestionare</h3></dt>
     <dd>Pagina cu chestionare unde utilizatorul isi poate testa cunostintele</dd>
+    <dd>p</dd>
   </dl>
   <dl>
     <dt><h3>Pagina Comparatii</h3></dt>
@@ -158,8 +159,6 @@
     <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
     <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
     <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
-    <li>Categoria A&B - redirectioneaza catre pagina Categoria A / Categoria B</li>
-    <li>Comparatii - redirectioneaza catre pagina Comparatii </li>
     <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
     <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
     <li>Contact - redirectioneaza catre pagina Contact</li>
@@ -169,14 +168,45 @@
   <dl>
     <dt><h3>Pagina Top Scoli Auto</h3></dt>
     <dd>Pagina cu cele mai bune scoli auto din anumite orase</dd>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
   </dl>
   <dl>
-    <dt><h3>Ajutor</h3></dt>
+    <dt><h3>Termeni</h3></dt>
     <dd>Pagina care ofera instructiuni pentru a utiliza aplicatia la potential maxim</dd>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
   </dl>
   <dl>
-    <dt><h3>Clasament</h3></dt>
+    <dt><h3>Top utilizatori</h3></dt>
     <dd>Pagina care ofera un clasament general cu cei mai buni utilizatori</dd>
+    <li>Butonul TOP - redirectioneaza catre un flux de </li>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
   </dl>
 </section>
 <section id="Reason1"></section>
