--- a/Documentatie/RoT-Documentatie.html
+++ b/Documentatie/RoT-Documentatie.html
@@ -119,7 +119,22 @@
   <dl>
     <dt><h3>Pagina Chestionare</h3></dt>
     <dd>Pagina cu chestionare unde utilizatorul isi poate testa cunostintele</dd>
-    <dd>p</dd>
+    <dd>Pagina contine 5 chestionare predefinite din care utilizatorul poate alege. Butonul Rezolva il va redirectiona catre chestionarul ales</dd>
+    <dd>Fiecare pagina cu chestionar contine: </dd>
+    <li>Intrebarea si variantele de raspuns</li>
+    <li>Submit - redirectioneaza catre urmatoarea intrebare</li>
+    <li>Rezolva din nou - buton ce redirectioneaza catre pagina principala cu chestionare . Acest buton va aparea dupa finaliz</li>
+    <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
+    <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
+    <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
+    <li>Deconectare - redirectioneaza catre pagina de Conectare (doar cand utilizatorul este logat)</li>
+    <li>Meniu - contine butoanele de redirectionare spre Legislatie, Indicatoare, Categorii si Chestionare</li>
+    <li>Termeni - redirectioneaza catre pagina Termeni si Conditii</li>
+    <li>Intrebari frecvente - redirectioneaza catre pagina Intrebari frecvente</li>
+    <li>Contact - redirectioneaza catre pagina Contact</li>
+    <li>Top Scoli Auto - redirectioneaza catre pagina Top Scoli Auto</li>
+    <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
+
   </dl>
   <dl>
     <dt><h3>Pagina Comparatii</h3></dt>
@@ -196,7 +211,7 @@
   <dl>
     <dt><h3>Top utilizatori</h3></dt>
     <dd>Pagina care ofera un clasament general cu cei mai buni utilizatori</dd>
-    <li>Butonul TOP - redirectioneaza catre un flux de </li>
+    <li>Butonul TOP - redirectioneaza catre un flux de date RSS</li>
     <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
     <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
     <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
