--- a/Documentatie/RoT-Documentatie.html
+++ b/Documentatie/RoT-Documentatie.html
@@ -6,7 +6,9 @@
   <style>
     h3 {
       margin-top: 0px;
-
+    }
+    h1 {
+      text-align: center;
     }
   </style>
 </head>
@@ -36,6 +38,14 @@
 </section>
 <section id="Architecture">
   <h2>3.Arhitectura Aplicatiei</h2>
+  <img width="800px"  src="C4-level 1" alt="C4-level 1">
+  <h1>C4 - level 1</h1>
+  <img width="800px"  src="C4-level 2" alt="C4-level 2">
+  <h1>C4 - level 2</h1>
+  <img width="800px" src="C4-level 3" alt="C4-level 3">
+  <h1>C4 - level 3</h1>
+  <img width="800px" src="C4-level 4" alt="C4-level 4">
+  <h1>C4 - level 4</h1>
   <p>Aplicatia Web contine mai multe pagini html printre care utilizatorul poate naviga cu usurinta.</p>
   <dl>
     <dt><h3>Pagina Acasa</h3></dt>
@@ -123,7 +133,7 @@
     <dd>Fiecare pagina cu chestionar contine: </dd>
     <li>Intrebarea si variantele de raspuns</li>
     <li>Submit - redirectioneaza catre urmatoarea intrebare</li>
-    <li>Rezolva din nou - buton ce redirectioneaza catre pagina principala cu chestionare . Acest buton va aparea dupa finaliz</li>
+    <li>Rezolva din nou - buton ce redirectioneaza catre pagina principala cu chestionare . Acest buton va aparea dupa finalizarea fiecarui chestionar.</li>
     <li>Logo-ul - redirectioneaza spre pagina Acasa</li>
     <li>Conectare - redirectioneaza catre pagina de Autentificare (doar cand utilizatorul nu este logat)</li>
     <li>Inregistrare - redirectioneaza catre pagina de Inregistrare</li>
@@ -224,12 +234,17 @@
     <li>Top Utilizatori - redirectioneaza catre pagina Top Utilizatori</li>
   </dl>
 </section>
+<section id="Permisiuni">
+  <h2>4.Permisiuni</h2>
+  <p><b>Utilizator nelogat</b> - are acces la toate paginile insa nu i se va putea urmari progresul</p>
+  <p><b>Utilizator logat</b> - are acces la toate paginile si i se va monitoriza progresul in cadrul Legislatiei si va aparea in Top Utilizatori in functie de chestionarele finalizate</p>
+  </section>
 <section id="Reason1"></section>
-<h2>4.Motivul pentru care am ales acest design</h2>
+<h2>5.Motivul pentru care am ales acest design</h2>
 <p>Am ales un design simplu și intuitiv pentru că ne-am dorit ca aplicația să fie ușor de folosit pentru toată lumea, indiferent de nivelul lor de experiență cu tehnologia. Paginile nu sunt încărcate cu multe informații pentru a nu bulversa sau plictisi utilizatorul. De asemenea este important ca în timpul procesului de învățare acesta să nu fie distras de anumite elemente.</p>
 </section>
 <section id="Reason2"></section>
-<h2>5.Motivul pentru care am ales acest proiect</h2>
+<h2>6.Motivul pentru care am ales acest proiect</h2>
 <p>Am ales să dezvoltăm această aplicație pentru că ne-am dorit să realizăm ceva care chiar ar putea veni in ajutorul oamenilor. Fiind o aplicație complexă și datorită faptului că există mai multe aplicații asemanatoare, credem că este o adevarată provocare să ne ridicăm la nivelul acestora, lucru ce ne va determina să învațăm mai multe și să devenim mai buni.</p>
 </section>
 <section id="biblio-references">
