--- a/Documentatie/RoT-Documentatie.html
+++ b/Documentatie/RoT-Documentatie.html
@@ -239,12 +239,20 @@
   <p><b>Utilizator nelogat</b> - are acces la toate paginile insa nu i se va putea urmari progresul</p>
   <p><b>Utilizator logat</b> - are acces la toate paginile si i se va monitoriza progresul in cadrul Legislatiei si va aparea in Top Utilizatori in functie de chestionarele finalizate</p>
   </section>
+<section id="Disponibilitate">
+  <h2>5.Disponibilitate pentru utilizatori</h2>
+  <p>Site-ul web are un design responsive ce permite folosirea acestuia pe orice dispozitiv cu acces la Internet.</p>
+</section>
+<section id="Implementare">
+  <h2>6.Implementare</h2>
+  <p>Site-ul web a fost realizat folosind pentru partea de backend PHP si o baza de date MySql, iar pentru cea de frontend HTML, CSS si JavaScript.</p>
+</section>
 <section id="Reason1"></section>
-<h2>5.Motivul pentru care am ales acest design</h2>
+<h2>7.Motivul pentru care am ales acest design</h2>
 <p>Am ales un design simplu și intuitiv pentru că ne-am dorit ca aplicația să fie ușor de folosit pentru toată lumea, indiferent de nivelul lor de experiență cu tehnologia. Paginile nu sunt încărcate cu multe informații pentru a nu bulversa sau plictisi utilizatorul. De asemenea este important ca în timpul procesului de învățare acesta să nu fie distras de anumite elemente.</p>
 </section>
 <section id="Reason2"></section>
-<h2>6.Motivul pentru care am ales acest proiect</h2>
+<h2>8.Motivul pentru care am ales acest proiect</h2>
 <p>Am ales să dezvoltăm această aplicație pentru că ne-am dorit să realizăm ceva care chiar ar putea veni in ajutorul oamenilor. Fiind o aplicație complexă și datorită faptului că există mai multe aplicații asemanatoare, credem că este o adevarată provocare să ne ridicăm la nivelul acestora, lucru ce ne va determina să învațăm mai multe și să devenim mai buni.</p>
 </section>
 <section id="biblio-references">
