--- a/Documentatie/RoT-Documentatie.html
+++ b/Documentatie/RoT-Documentatie.html
@@ -38,7 +38,7 @@
 </section>
 <section id="Architecture">
   <h2>3.Arhitectura Aplicatiei</h2>
-  <img width="800px"  src="C4-level 1" alt="C4-level 1">
+  <img width="800px"  src="C4-level%201.png" alt="C4-level 1">
   <h1>C4 - level 1</h1>
   <img width="800px"  src="C4-level 2" alt="C4-level 2">
   <h1>C4 - level 2</h1>
